<resources>
    <string name="app_name">Note Kotlin</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Update Note</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="title">Title</string>
    <string name="content">content</string>
    <string name="notes">Notes</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="todo">TODO</string>
</resources>