<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateNoteActivity">

    <TextView
        android:id="@+id/updateNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/edit_note"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/updateNoteHeading"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/done_24"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/updateNoteHeading"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_the_title"
        android:textColorHint="@color/light_green"
        android:textColor="@color/light_green"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:textSize="20sp"
        android:background="@drawable/green_border"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTitleEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_the_description"
        android:gravity="top"
        android:fontFamily="@font/poppins"
        android:textColorHint="@color/light_green"
        android:textColor="@color/light_green"
        android:textSize="20sp"
        android:padding="12dp"
        android:background="@drawable/green_border"
        />
</androidx.constraintlayout.widget.ConstraintLayout>